<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.devices.blinky.BlinkyActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/device_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/blinky_led_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/led_tool_bar"
                        android:layout_width="0dp"
                        android:layout_height="?actionBarSize"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:logo="@drawable/ic_toolbar_lightbulb"
                        app:title="@string/title_led_state"
                        app:titleMarginStart="@dimen/toolbar_title_margin" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/led_summary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/led_summary"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/led_tool_bar" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/led_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/turn_off"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/led_summary" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/led_switch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        app:layout_constraintBaseline_toBaselineOf="@+id/led_state"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blinky_led_layout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/button_tool_bar"
                        android:layout_width="0dp"
                        android:layout_height="?actionBarSize"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:logo="@drawable/ic_toolbar_button"
                        app:title="@string/title_button_state"
                        app:titleMarginStart="@dimen/toolbar_title_margin" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/button_summary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/button_summary"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_tool_bar" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/state"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_summary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/button_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/button_unknown"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                        app:layout_constraintRight_toRightOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/ui_connecting"
        android:id="@+id/progress_container"/>

    <include
        android:id="@+id/not_supported"
        layout="@layout/info_not_supported"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>